--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,6 @@ body
 	background-color: #fff;
 }
 
-/*#siteContainer
-{
-	width:1366px;
-	margin: 0 auto;
-}*/
 
 .headerCon
 {
@@ -57,13 +52,11 @@ body
 }
 
 
-
 #mainNav ul li a
 {	
 	font-size: 17px;
 	width: 90px;
 	margin-left: 30px;
-/*	padding: 18px;*/
 	text-decoration: none;
 	color: #f8f8f8;
 	font-family: 'Montserrat' ,Helvetica, Arial, sans-serif;
@@ -75,14 +68,13 @@ body
 	color: #00c15e;
 	border-bottom: solid 3px;
 	padding-bottom: 8px;
-/*	color: red;*/
 }
 
+/*==================== Home Section===========*/
 #indexPage
 {
-/*	width: 1366px;
-	height: 783px;*/
 	background: url('../images/homepage_img.jpg') no-repeat center;
+	background-color: #282e39;
 	display: flex;
 	flex-direction: column;
 }
@@ -137,96 +129,121 @@ body
 
 }
 
+/*========End Home Section=============*/
+
+/*=========Start About Section==========*/
 #aboutPage
 {
-	width: 1366px;
-	height: 1250px;
+
 	background-color: #ffffff;
 	display: flex;
 	flex-direction: column;
 }
-#aboutPage h1
+
+#aboutPage h2
 {
-	font-size:68px;
-	font-family: Andale Mono, Helvetica, sans-serif;
-	color: #006633;
+	font-size:50px;
+	font-family: 'Montserrat',Andale Mono, Helvetica, sans-serif;
+	color: #00a651;
 	text-align: center;
 	margin-top: 73px;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
+	/*font-weight: bold;*/
+	letter-spacing: 2px;
 
 }
 
 .waterline
 {
-	margin-left:480px;
+	margin: 0 auto;
 	margin-bottom:70px;
 }
+
+
 .aboutContent 
 {
 	display:flex;
 	flex-direction: row;
-	margin-left: 100px;
+	width: 1000px;
+	margin: 0 auto;
+	margin-top: 70px;
 }
+
+.aboutContent:nth-child(3)
+{
+	margin-top: 0px;
+} 
 
 .aboutContent p
 {
-	font-size:37px;
-	width:1390px;
-	height:175px;
+	width: 820px;
+	font-size:31px;
 	font-family: Apple Symbols, Arial, sans-serif;
 	color: #006633;
-	margin-left:45px;
+	margin-left: 70px;
 	margin-top: 10px;
 }
+
 .aboutIcon
 {
-	width:100px;
-	height:100px;
+	width:80px;
+	height:80px;
+	margin-left: 30px; 
 
 }
+
 #aboutButton
 {
 	display:flex;
 	flex-direction: row;
+	margin: 0 auto;
 	margin-top: 80px;
 	margin-bottom:90px;
 
 }
+
 #aboutButton a:hover
 {
 	color:red;
 }
+
 .greenButton
 {
-	width:250px;
-	height: 60px;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	margin-right: 30px;
 	background-color: #2e7551;
 	font-size: 42px;
 	color:#fff;
 	text-decoration: none;
-	text-align: center;
 	font-family: Apple Symbols, Arial;
-	margin-left: 428px;
-		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#49b17c+0,008a00+55,2e7551+100,002400+100 */
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#49b17c+0,2e7551+51,49b17c+100 */
-	background: #49b17c; /* Old browsers */
+	background: #49b17c; 
 	background: -moz-linear-gradient(top, #49b17c 0%, #2e7551 51%, #49b17c 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, #49b17c 0%,#2e7551 51%,#49b17c 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, #49b17c 0%,#2e7551 51%,#49b17c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49b17c', endColorstr='#49b17c',GradientType=0 ); /* IE6-9 */
 }
+
 .greyButton
 {
-	width:250px;
-	height: 60px;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin-left: 30px;
 	background-color: #e1eae6;
 	font-size:42px;
 	color:#006633;
 	text-decoration: none;
 	text-align: center;
 	font-family: Apple Symbols, Arial;
-	margin-left: 55px;
 }
+
+/*=========End About Section=========*/
+
+/*===========Membership Area=======*/
 
 #membership
 {
@@ -236,6 +253,7 @@ body
 	flex-direction: row;
 	background-color:#999999;
 }
+
 #membershipText
 {
 	margin-left:60px;
@@ -243,6 +261,7 @@ body
 	display: flex;
 	flex-direction: column;
 }
+
 #membershipText h2
 {
 	font-size:72px;
@@ -251,6 +270,7 @@ body
 	margin-top:10px;
 	margin-bottom:20px;
 }
+
 #membershipText h3
 {
 	font-size:38px;
@@ -258,6 +278,7 @@ body
 	color: #fff;
 	margin-bottom:10px;
 }
+
 #membershipText p
 {
 	font-size:34px;
@@ -273,8 +294,10 @@ body
 	margin-left:100px;
 	margin-bottom:20px;
 }
-/*End of Membership*/
-/*Begin of Events*/
+
+/* ===========End of Membership===========*/
+
+/*============== Begin of Events ==========*/
 #eventPage
 {
 	width:1366px;
