updated membership area

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ body
 #indexPage
 {
 	background: url('../images/homepage_img.jpg') no-repeat center;
-	background-color: #282e39;
+	background-color: rgba(36,43,52,0.9);
 	display: flex;
 	flex-direction: column;
 }
@@ -247,7 +247,7 @@ body
 
 #membership
 {
-	width:1366px;
+/*	width:1366px;*/
 	height: 260px;
 	display: flex;
 	flex-direction: row;
@@ -256,7 +256,8 @@ body
 
 #membershipText
 {
-	margin-left:60px;
+	margin: 0 auto;
+/*	margin-left:60px;*/
 	width:860px;
 	display: flex;
 	flex-direction: column;
@@ -264,16 +265,16 @@ body
 
 #membershipText h2
 {
-	font-size:72px;
+	font-size:60px;
 	font-family: Apple Symbols, Arial;
 	color: #fff;
-	margin-top:10px;
+	margin-top:40px;
 	margin-bottom:20px;
 }
 
 #membershipText h3
 {
-	font-size:38px;
+	font-size:30px;
 	font-family: Apple Symbols, Arial;
 	color: #fff;
 	margin-bottom:10px;
@@ -281,7 +282,7 @@ body
 
 #membershipText p
 {
-	font-size:34px;
+	font-size:28px;
 	font-family: Apple Symbols, Arial;
 	color: #fff;
 }
@@ -291,6 +292,7 @@ body
 	width:270px;
 	height:270px;
 	border-radius: 50%;
+	margin: 0 auto;
 	margin-left:100px;
 	margin-bottom:20px;
 }
