--- a/css/main.css
+++ b/css/main.css
@@ -529,6 +529,7 @@ body
 {
 	background-color: #e1eae6;
 	padding-top: 70px;
+	padding-bottom: 140px;
 }
 
 .contact
@@ -594,8 +595,97 @@ body
 	background-color: #fff;
 	width: 920px;
 	margin: 0 auto;
+	padding-top: 65px;
+	/*margin-bottom: 140px;*/
 }
 
+.form h3
+{
+	font-size: 35px;
+	font-family: Apple Symbols, Arial, sans-serif;
+	color: #00a653;
+	width: 720px;
+	border-bottom: solid 1px #ececec;
+	margin: 0 auto;
+	text-align: left;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	margin-bottom: 45px;
+}
+
+#contactForm
+{
+	width: 720px;
+	margin: 0 auto;
+}
+
+.inputCon1, .inputCon2
+{
+	display: flex;
+	flex-direction: row;
+	margin: 0 auto;
+	justify-content: space-between;
+}
+
+.inputCon2
+{
+	margin-top: 35px;
+	margin-bottom: 35px;
+}
+
+#name, #email, #phone, #subject
+{
+	width: 345px;
+	height: 55px;
+	height: 60px;
+	border: solid 1px #aeaeae;
+	background: #fefefe; 
+	background: -moz-linear-gradient(-45deg, #fefefe 0%, #f2f2f2 100%); 
+	background: -webkit-linear-gradient(-45deg, #fefefe 0%,#f2f2f2 100%); 
+	background: linear-gradient(135deg, #fefefe 0%,#f2f2f2 100%); 
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f2f2',GradientType=1 );
+
+	box-shadow: 0 1px 3px rgba(0,0,0,0.15) inset;
+
+}
+
+::placeholder
+{
+	font-size: 20px;
+	color: #aeaeae;
+	font-family: Myriad Pro ,Apple Symbols, Arial, sans-serif;		/*box-shadow: 0 1px 1px rgba(0,0,0,0.15) inset;*/
+	padding-top: 25px;
+	padding-left: 10px;
+}
+
+#message
+{
+	width: 720px;
+	margin-bottom: 40px;
+	border: solid 1px #aeaeae;
+	background: #fefefe; 
+	background: -moz-linear-gradient(-45deg, #fefefe 0%, #f2f2f2 100%); 
+	background: -webkit-linear-gradient(-45deg, #fefefe 0%,#f2f2f2 100%); 
+	background: linear-gradient(135deg, #fefefe 0%,#f2f2f2 100%); 
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f2f2',GradientType=1 );
+	box-shadow: 0 1px 3px rgba(0,0,0,0.15) inset;
+
+}
+
+#submit
+{
+	margin-bottom: 80px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	background-color: #00a651;	
+	color: #ffffff;
+	font-size: 30px;
+	text-transform: uppercase;
+	font-family: Myriad Pro ,Apple Symbols, Arial, sans-serif;		/*box-shadow: 0 1px 1px rgba(0,0,0,0.15) inset;*/
+
+}
 
 
 /* ============== END CONTACT SECTION ========*/
