Created Social Media section

--- a/css/main.css
+++ b/css/main.css
@@ -690,7 +690,14 @@ body
 
 /* ============== END CONTACT SECTION ========*/
 
+/*========= SOCIAL MEDIA ========-====*/
 
+.socialMediaCon
+{
+	background-color: #3e3e3e;
+}
+
+/*========== END SOCIAL MEDIA =========*/
 
 
 
