--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,20 @@ body
 	padding-bottom: 8px;
 }
 
+.flip-vertical-left {
+	animation: flip-vertical-left 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+@keyframes flip-vertical-left {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(-180deg);
+  }
+}
+
+
 /*==================== Home Section===========*/
 #indexPage
 {
@@ -91,8 +105,8 @@ body
 	margin: 0 auto;
 	margin-top: 120px;
 	color: #ededed;
-
 }
+
 
 .HPwaterline
 {	
@@ -188,8 +202,8 @@ body
 	width:80px;
 	height:80px;
 	margin-left: 30px; 
-
 }
+
 
 #aboutButton
 {
@@ -198,7 +212,6 @@ body
 	margin: 0 auto;
 	margin-top: 80px;
 	margin-bottom:90px;
-
 }
 
 #aboutButton a:hover
