--- a/css/main.css
+++ b/css/main.css
@@ -70,20 +70,6 @@ body
 	padding-bottom: 8px;
 }
 
-.flip-vertical-left {
-	animation: flip-vertical-left 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
-}
-
-@keyframes flip-vertical-left {
-  0% {
-    transform: rotateY(0);
-  }
-  100% {
-    transform: rotateY(-180deg);
-  }
-}
-
-
 /*==================== Home Section===========*/
 #indexPage
 {
@@ -93,17 +79,33 @@ body
 	flex-direction: column;
 }
 
+.welcomeCon
+{
+	width: 780px;
+	margin: 0 auto;
+	margin-top: 120px;
+    animation: yourAnimation 2s 1 0s ease;
+    margin-bottom: 100px;
+}
+
+@keyframes yourAnimation{
+    0%{
+        transform: translateY(12%);
+        opacity: 0;
+        }
+    100%{
+        transform: translateY(100);
+        opacity: 1;
+        }
+}
+
 #WelcomeText
 {
-	width: 847px;
-	height: 70px;
 	font-size:64px;
 	font-family: 'Montserrat' ,Andale Mono, Helvetica, sans-serif;
 	font-weight: bold;
 	color: #fff;
 	text-align:center;
-	margin: 0 auto;
-	margin-top: 120px;
 	color: #ededed;
 }
 
@@ -111,15 +113,17 @@ body
 .HPwaterline
 {	
 	margin: 0 auto;
+	display: block;
 	margin-top:50px;
-/*	margin-left:425px;*/
+/*	margin-left:95px;*/
 }
 
 .HPwaterline2
 {
 	margin: 0 auto;
+	display: block;
 	margin-top: 50px;
-	margin-bottom: 100px;
+
 }
 
 #IntroText
@@ -142,6 +146,9 @@ body
 	margin-top:50px;
 
 }
+
+
+
 
 /*========End Home Section=============*/
 
@@ -312,6 +319,7 @@ body
 	margin-bottom:20px;
 }
 
+
 /* ===========End of Membership===========*/
 
 /*============== Projects=============*/
@@ -341,7 +349,8 @@ body
 .waterlineProjects
 {	
 	
-	margin-left: 310px;
+	margin: 0 auto;
+	display: block; 
 	margin-bottom: 60px;
 }
 
@@ -563,7 +572,8 @@ body
 
 .contact img
 {
-	margin-left: 365px;
+	margin: 0 auto;
+	display: block;
 	margin-bottom: 80px;
 }
 
