--- a/css/main.css
+++ b/css/main.css
@@ -807,14 +807,31 @@ footer
 
 
 
-
-
-
-
-
-
-
 /*========= END FOOTER ===========*/
+
+/*Newsletter section*/
+#newsletter h1
+{
+	font-size: 65px;
+	font-family: 'Montserrat',Andale Mono, Helvetica, sans-serif;
+	color: #00a651;
+	text-align: center;
+	margin-top: 130px;
+	margin-bottom: 40px;
+
+}
+
+.waterlineNewsletter
+{	
+	display: block;
+  	margin-left: auto;
+ 	 margin-right: auto;
+}
+#newletter
+{
+	display: flex;
+	flex-direction: column;
+}
 
 
 
