--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ body
 	margin: 0 auto;
 	display: block;
 	margin-top:50px;
+	width: 340px;
 }
 
 .HPwaterline2
@@ -122,7 +123,7 @@ body
 	margin: 0 auto;
 	display: block;
 	margin-top: 50px;
-
+	width: 340px;
 }
 
 #IntroText
@@ -166,16 +167,17 @@ body
 	font-family: 'Montserrat',Andale Mono, Helvetica, sans-serif;
 	color: #00a651;
 	text-align: center;
-	margin-top: 73px;
+	margin-top: 80px;
 	margin-bottom: 30px;
 	letter-spacing: 2px;
 
 }
 
-.waterline
+.waterlineAbout
 {
 	margin: 0 auto;
 	margin-bottom:70px;
+	width: 380px;
 }
 
 
@@ -351,6 +353,7 @@ body
 	margin: 0 auto;
 	display: block; 
 	margin-bottom: 60px;
+	width: 340px;
 }
 
 .projectsInfo
@@ -410,6 +413,42 @@ body
 	border-top: solid 1px #b1d1c1;
 }
 
+.data
+{
+	margin: 0 auto;
+	width: 900px;
+	background-color: #e1eae6;
+	margin-bottom: 180px;
+}
+
+.data h3
+{
+	font-size: 36px;
+	color: #4ca64c;
+	text-align: center;
+	font-family: Andale Mono, Helvetica, sans-serif;
+	margin-top: 50px;
+	margin-bottom: 90px;
+}
+
+.data img
+{
+	display: block;
+	margin: 0 auto;
+}
+
+.data img:nth-child(3)
+{
+	margin-top: 150px;
+	margin-bottom: 150px;
+}
+
+.data img:nth-child(4)
+{
+	margin-bottom: 150px;
+}
+
+
 
 /*===========End Of projects Section=======*/
 
@@ -436,6 +475,7 @@ body
 {
 	margin: 0 auto;
 	margin-bottom: 100px;
+	width: 350px;
 }
 
 #firstEvent
@@ -567,15 +607,17 @@ body
 	color: #00a653;
 	font-family: 'Montserrat' ,Andale Mono, Helvetica, sans-serif;
 	letter-spacing: 1px;
-	margin-bottom: 25px;
+	margin-bottom: 28px;
 }
 
-.contact img
+.waterlineContact
 {
+	width: 380px;
 	margin: 0 auto;
 	display: block;
 	margin-bottom: 80px;
 }
+
 
 .contactInfo
 {
@@ -873,8 +915,9 @@ footer
 {	
 	display: block;
   	margin-left: auto;
- 	 margin-right: auto;
- 	 margin-bottom:100px;
+ 	margin-right: auto;
+ 	margin-bottom:100px;
+ 	width: 400px;
 }
 #newletter
 {
